--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -176,6 +176,7 @@ specrich$date<-as.Date(specrich$date)
 # 
 # debug(Templag)
 SPTWAMT.mat<-mapply(Templag, specrich$siteid, specrich$date)
+# saveRDS(SPTWAMT.mat, file = 'SpeciesRichTempLag.rds')
 specrich$TwoWeekAvgMT<- c(unlist(SPTWAMT.mat[1,]))
 specrich$DegreeDays <- c(unlist(SPTWAMT.mat[2,]))
 # undebug(Templag)
@@ -197,10 +198,10 @@ specrich$DegreeDays <- c(unlist(SPTWAMT.mat[2,]))
 specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska', ifelse(specrich$domainid == 'D04', 'Puerto Rico', 'Continental U.S'))
 
 #Preliminary graph of latitude by species richness overall
-SpecRichLat<-ggplot(specrich,aes(lat2, num_species))+
+ggplot(specrich,aes(lat2, num_species))+
   geom_point(aes(colour = Year), size = 2)+
   labs(x = "Latitude", y = "Number of Species")
-  # ggtitle("Species Richness by Latitude")
+  ggtitle("Species Richness by Latitude")
 
 # #Preliminary graph of latitude vs. maximum temp
 # ggplot(specrich, aes(lat2, Max.TempC))+
@@ -215,17 +216,18 @@ SpecRichLat<-ggplot(specrich,aes(lat2, num_species))+
 #   ggtitle("Latitude by Precipitation")
 
 #Preliminary graph of species richness by max temp avg
-SpecRichTemp<-ggplot(specrich, aes(TwoWeekAvgMT, num_species))+
-geom_point(aes(color = Continental))+
-labs(x = "Two Week Average Maximum Temperature in Celsius", y = "Number of Species")
-# ggtitle("Species Richness by Two Week Average Maximum Temperature")
+ggplot(specrich, aes(TwoWeekAvgMT, num_species))+
+  geom_point(aes(color = Continental))+
+  labs(x = "Two Week Average Maximum Temperature in Celsius", y = "Number of Species")+
+  ggtitle("Species Richness by Two Week Average Maximum Temperature")
 
 #Preliminary graph of species richness by degree day
-ggplot(specrich, aes(DegreeDays,num_species))+
+ggplot(specrich, aes(DegreeDays, num_species))+
   geom_point(aes(color = Continental))+
-  labs(x = "Precipitation in Millimeters", y = "Number of Species")+
-  # ggtitle("Species Richness by Precipitation")
+  labs(x = "Number of Days Above 16 Degrees Celsius", y = "Number of Species")+
+  ggtitle("Species Richness by Precipitation")
 
+  
 # ggplot(specrich, aes(NLCDclass, num_species))+
 #   geom_jitter(aes(color = NLCDclass))+
 #   scale_x_discrete(labels = c("evergreenForest" = "EGF", "woodyWetlands" = "WWK", "emergentHerbaceousWetlands" = "EHWL", "grasslandHerbaceous" = "GLH","deciduousForest" = "DF", "shrubScrub"= "SS", "mixedForest"= "MF", "pastureHay" = "PH", "cultivatedCrops" = "CC", "dwarfScrub" = "DS", "NA" = "NA"))
@@ -354,11 +356,10 @@ tars<- id[grepl("Culex tarsalis", id$scientificName),]
 tarssmall <- tars[tars$Year %in% c(2014,2016), ]
 
 CTTWAMT.mat<- mapply(Templag, tarssmall$siteid, tarssmall$date)
+# saveRDS(CTTWAMT.mat, file = 'CulexTarsalisTempLag.rds')
+
 tarssmall$TwoWeekAvgMT <-c(unlist(CTTWAMT.mat[1,]))
 tarssmall$DegreeDays <- c(unlist(CTTWAMT.mat[2,]))
-
-tars2014 <- tarssmall[tarssmall$Year==2014,]
-tars2016 <- tarssmall[tarssmall$Year==2016,]
 
 #Examples of tars<- id[id$scientificName=="Culex tarsalis",]
 
@@ -376,19 +377,23 @@ tarssmall <- merge(x = tarstax.df, y = tarssmall, by.x = "domainID", by.y = "dom
 tarssmall$lat2<- as.numeric(tarssmall$lat2)
 tarssmall$lon2<- as.numeric(tarssmall$lon2)
 
+tars2014 <- tarssmall[tarssmall$Year==2014,]
+tars2016 <- tarssmall[tarssmall$Year==2016,]
+
+
 # tarssmall$TwoWeekAveragePrecip<-mapply(Preciplag, tarssmall$siteid, tarssmall$date)
 
 #number of sites of appearance
-length(unique(tars$uniquePlotIDs)) #160
-# length(unique(tars2013$uniquePlotIDs)) #35
-length(unique(tars2014$uniquePlotIDs)) #40
-length(unique(tars2016$uniquePlotIDs)) #115
-
-
-#Sum of Cu. tarsalis for each year
-# sum(tars2013$newindividualCount) # 1,690
-sum(tars2014$newindividualCount) # 17,432
-sum(na.omit(tars2016$newindividualCount)) # 11,827
+# length(unique(tars$uniquePlotIDs)) #160
+# # length(unique(tars2013$uniquePlotIDs)) #35
+# length(unique(tars2014$uniquePlotIDs)) #40
+# length(unique(tars2016$uniquePlotIDs)) #115
+# 
+# 
+# #Sum of Cu. tarsalis for each year
+# # sum(tars2013$newindividualCount) # 1,690
+# sum(tars2014$newindividualCount) # 17,432
+# sum(na.omit(tars2016$newindividualCount)) # 11,827
 
 #Proportion of Cu. tarsalis relative to total number collected by year
 # sum(complete.cases(tars2013$newindividualCount))/sum(complete.cases(id2013$newindividualCount))
