--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -71,6 +71,7 @@ id <- left_join(id, sort[, c('subsampleID', cols)],
 #Creating a dataframe with only the unique plotIDs and lat2 lon2 data for merging
 uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2", "elevation","NLCDclass")]
 
+
 #Merging id df with lat2 lon2 data
 id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "uniquePlotIDs", all.y = TRUE)
 
@@ -114,13 +115,15 @@ id$Year<-ifelse(is.na(id$collectDate), substr(id$receivedDate,1,4), substr(id$co
 id$Year<-as.factor(id$Year)
 
 #Exctracting date information for id
+id$identifiedDate<- as.character(id$identifiedDate)
+
 id$Date<-substr(id$collectDate,1,10)
 
 #Change temp date type
 temp.df$date <- as.Date(temp.df$date)
 
 #Broad Site ID variable 
-id$siteID<-substr(id$uniquePlotIDs,1,4)
+id$siteID<-substr(id$subsampleID, 1,4)
 
 #merging id with temp data
 id <- merge(x = temp.df, y = id, by.y = c('siteID','Date'), by.x = c('siteID','date'), all.y = TRUE)
@@ -158,13 +161,26 @@ idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
 ###Species Richness Vignette
 
 ```{r}
-#If I merge dataframes then it automatically removes the null plot ID
-
 #Creation of a dataframe that maps plotIds to number of unique scientific names
-specrich <- ddply(idsmall, ~ uniquePlotIDs + domainid + siteid + date + Year + HoursOfTrapping + Precipmm + Max.TempC, summarize, num_species = length(scientificName))
+specrich <- ddply(idsmall, ~ siteid + domainid + date, summarize, num_species = length(unique(scientificName)))
+
+#Omit all instances where date is unknown
+specrich <- specrich[complete.cases(specrich$date),]
 
 #Merging to get lat2 lon2 data
-specrich <- merge(x = uniquetrap, y = specrich, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
+
+#First extract site id for the uniquetrap data frame
+uniquetrap$siteid <- substr(uniquetrap$uniquePlotIDs,1,4)
+
+#Omit any instances where lat and lon is not known for a site
+uniquetrap <- uniquetrap[uniquetrap$lat2!="",]
+
+#taking only the observations that are not duplicated
+uniquetrap <- uniquetrap[!duplicated(uniquetrap$siteid),]
+
+
+#merge with lat lon data excluding plotID
+specrich <- merge(x = uniquetrap[,c("lat2", "lon2", "elevation", "NLCDclass", "siteid")], y = specrich, by.y = "siteid", by.x = "siteid")
 
 #Changin lat2 to a numeric and date to date class
 specrich$lat2<-as.numeric(specrich$lat2)
@@ -199,8 +215,8 @@ specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska',
 
 #Preliminary graph of latitude by species richness overall
 ggplot(specrich,aes(lat2, num_species))+
-  geom_point(aes(colour = Year), size = 2)+
-  labs(x = "Latitude", y = "Number of Species")
+  geom_point(aes(colour = Continental), size = 2)+
+  labs(x = "Latitude", y = "Number of Species")+
   ggtitle("Species Richness by Latitude")
 
 # #Preliminary graph of latitude vs. maximum temp
