--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -5,13 +5,12 @@ output:
   html_document: default
   word_document: default
 ---
-###Data Frame Set Up
+### Data Frame Set Up
 
 ```{r, warning=FALSE, message=FALSE}
 # install.packages('tidyverse')
 library(tidyverse)
 library(mosaic)
-library(car)
 library(plyr)
 library(ggplot2)
 library(gridExtra)
@@ -134,22 +133,22 @@ temp.df$date <- as.Date(temp.df$date)
 #Broad Site ID variable 
 id$siteID<-substr(id$subsampleID, 1,4)
 
-#merging id with temp data
-id <- merge(x = temp.df, y = id, by.y = c('siteID','Date'), by.x = c('siteID','date'), all.y = TRUE)
-
-#Converting temperature to proper value
-id$value<-id$value/10
-names(id)[5]<-"Max.TempC"
-
-#Change precip date type
-precip.df$date <- as.Date(precip.df$date)
-
-#Merge id with precip data
-id <- merge(x = precip.df[,c(1,4,9)], y = id, by.y = c('siteID', 'date'), by.x = c('siteID', 'date'), all.y = TRUE)
-
-#converting temperature to proper value and renaming
-id$value<-id$value/10
-names(id)[3]<-"Precipmm"
+# #merging id with temp data
+# id <- merge(x = temp.df, y = id, by.y = c('siteID','Date'), by.x = c('siteID','date'), all.y = TRUE)
+# 
+# #Converting temperature to proper value
+# id$value<-id$value/10
+# names(id)[5]<-"Max.TempC"
+# 
+# #Change precip date type
+# precip.df$date <- as.Date(precip.df$date)
+# 
+# #Merge id with precip data
+# id <- merge(x = precip.df[,c(1,4,9)], y = id, by.y = c('siteID', 'date'), by.x = c('siteID', 'date'), all.y = TRUE)
+# 
+# #converting temperature to proper value and renaming
+# id$value<-id$value/10
+# names(id)[3]<-"Precipmm"
 
 #Merge with domain info.
 id <- merge(x = domain.df, y = id, by.y = "siteID", by.x = "siteid", all.y = TRUE)
@@ -167,10 +166,11 @@ idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
 ```
 
 
-###Species Richness Vignette
+### Species Richness Vignette
 
 ```{r}
 #Creation of a dataframe that maps plotIds to number of unique scientific names
+
 specrich <- ddply(idsmall, ~ siteid + domainid + date, summarize, num_species = length(unique(scientificName)))
 
 #Omit all instances where date is unknown
